Ajout des réalisations

--- a/app/view/contact.twig
+++ b/app/view/contact.twig
@@ -48,7 +48,7 @@
         <div class="col-sm-6 moreInfo">
             <h3>Plus d'informations</h3>
                 <p>
-                    <span id="name">Marc LEAUMENT<br /></span>
+                    <span id="name">Marc LÉAUMENT<br /></span>
                     Analyste & Développeur logiciels / web <br />
                     Dépannage & Maintenance informatique
                 </p>
