--- a/app/view/index.twig
+++ b/app/view/index.twig
@@ -7,31 +7,41 @@
 
 {% block container %}
 
-    <div class="titreTest">
-        <h1>Bienvenue !
-        <span></span>
-        </h1>
-        <h2>blabal</h2>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="blueContainer">
+                <h2>Présentation</h2>
+            </div>
+            <div class="contentContainer">
+                <span>Bonjour à tous ! Je me présente Marc Léaument, j'ai 25 ans et je réside à Eysines près de Bordeaux. <br />
+                Depuis de nombreuses années, je consacre la plupart de mon temps à l'informatique. J'ai donc tout naturellement choisi d'orienter mes études dans ce domaine
+                mais plus précisément dans le développement d'applications. En effet, je suis attiré par l'apprentissage de nouveaux langages.</span>
+            </div>
+        </div>
     </div>
 
-    <h1></h1>
-    <h2>Exemple de h2</h2>
-    <h3>Exemple de h3</h3>
-    <h4>Exemple de h4</h4>
-    <h5>Exemple de h5</h5>
-    <h6>Exemple de h6</h6>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
-    <p>OK, même s'il est pour l'instant un peu vide, mon blog sera trop bien !</p>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="blueContainer">
+                <h2>Compétences</h2>
+            </div>
+            <div class="contentContainer">
+                <span>Etant développeur, </span>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="blueContainer">
+                <h2>Quelques réalisations</h2>
+            </div>
+            <div class="contentContainer">
+                <span></span>
+            </div>
+        </div>
+    </div>
 
 
 
