--- a/web/css/style.css
+++ b/web/css/style.css
@@ -24,6 +24,7 @@ body {
     background-repeat: no-repeat;
     border-bottom: 1px solid #0070C0;
     margin-top: 20px;
+    /*margin-bottom: 20px;*/
 }
 
 .sectionTitle h1 {
@@ -166,7 +167,6 @@ ul.footer-nav li.borderRight {
     border-right: 2px solid #0070C0;
 }
 
-
 footer .name {
     color: #ffffff;
     font-weight: bold;
@@ -191,8 +191,7 @@ footer .name {
 .row .blackContainer {
     background: #101010;
     padding: 10px;
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 .row .blackContainer h1 {
@@ -205,7 +204,7 @@ footer .name {
 }
 
 .row .blueContainer {
-    margin-top: 10px;
+    margin-top: 20px;
     background: #0070C0;
     padding: 5px;
 }
@@ -258,3 +257,72 @@ footer .name {
         margin-top: 25px;
     }
 }
+
+/* Réalisations */
+.realization .project {
+    margin-top: 20px;
+}
+
+.realization .project .content{
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    background: #101010;
+}
+
+.realization .project .content img {
+    transition: all .6s ease-out;
+    border: 1px solid #AAAAAA;
+}
+
+.realization .project:hover img {
+    transform: scale(1.3) rotate(3deg);
+    width: auto;
+    height: auto;
+}
+
+.realization .project .title {
+    position:absolute;
+    top:20px;
+    left:0;
+    padding:10px;
+    background: #0070C0;
+    text-transform: uppercase;
+    opacity: 0.9;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    width:100%;
+    height: 50px;
+    z-index:1;
+    display: none;
+}
+
+.realization .project .info {
+    position:absolute;
+    top:30%;
+    left:0;
+    padding:10px;
+    color: #FFFFFF;
+    font-size: 20px;
+    text-align: center;
+    width:100%;
+    height: 75px;
+    z-index:1;
+    display: none;
+}
+
+.realization .project .more {
+    position:absolute;
+    bottom: 0;
+    left:0;
+    padding:10px;
+    color: #FFFFFF;
+    text-align: center;
+    width:100%;
+    height: 75px;
+    z-index:1;
+    display: none;
+}
+
