- Mise à jour des réalisations - Correction du css

--- a/app/view/realization.twig
+++ b/app/view/realization.twig
@@ -12,7 +12,7 @@
                 <img class="img-responsive" src="/images/LoisirsEncheres.png" alt="Loisirs Enchères" />
                 <span class="title">Loisirs Enchères</span>
                 <span class="info">Site de ventes aux enchères. Il propose de nombreux lots à remporter allant d'un dîner romantique à un parc d'attraction.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="#" target="_blank"> En savoir +</a></span>
+                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="http://www.loisirsencheres.com" target="_blank"> <i class="glyphicon glyphicon-eye-open"></i> En savoir +</a></span>
             </div>
         </div>
 
@@ -21,7 +21,16 @@
                 <img class="img-responsive" src="/images/GarageDeLaTour.png" alt="Garage de la Tour" />
                 <span class="title">Garage de la Tour</span>
                 <span class="info">Site regroupant les véhicules en vente pour le garage de la Tour ainsi que diverses informations pratiques.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="#" target="_blank"> En savoir +</a></span>
+                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="http://www.ggedelatour.hebergratuit.com" target="_blank"> <i class="glyphicon glyphicon-eye-open"></i> En savoir +</a></span>
+            </div>
+        </div>
+
+        <div class="project col-sm-6 col-lg-4">
+            <div class="content">
+                <img class="img-responsive" src="/images/SummerBreakEdition.png" alt="Summer Break Edition"/>
+                <span class="title">Summer Break Edition</span>
+                <span class="info">Version de Candy Crush multijoueur réalisé pour l'entreprise Moët & Chandon</span>
+                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="http://moetsummerbreak.com/?code=test" target="_blank"> <i class="glyphicon glyphicon-eye-open"></i> En savoir +</a></span>
             </div>
         </div>
 
@@ -30,7 +39,6 @@
                 <img class="img-responsive" src="/images/SikaRembourse.png" alt="Sika Rembourse"/>
                 <span class="title">Sika Rembourse</span>
                 <span class="info">Site permettant à l'utilisateur de s'inscrire à un tirage au sort organisé par Sika.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="#" target="_blank"> En savoir +</a></span>
             </div>
         </div>
 
@@ -38,44 +46,27 @@
             <div class="content">
                 <img class="img-responsive" src="/images/Moka.png" alt="Moka" />
                 <span class="title">Moka</span>
-                <span class="info">Site de ventes aux enchères. Il propose de nombreux lots à remporter allant d'un dîner romantique à un parc d'attraction.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="#
-                " target="_blank"> En savoir +</a></span>
+                <span class="info">Logiciel de gestion commerciale adapté à la vente directe.</span>
             </div>
         </div>
 
         <div class="project col-sm-6 col-lg-4">
             <div class="content">
                 <img class="img-responsive" src="/images/EmballerCestBipe.png" alt="Emballer c'est bipé"/>
-                <span class="title">Garage de la Tour</span>
-                <span class="info">Site regroupant les véhicules en vente dans un garage avec diverses informations.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="#" target="_blank"> En savoir +</a></span>
+                <span class="title">Emballé c'est bippé</span>
+                <span class="info">Version du célèbre jeu de Tetris réalisé pour l'entreprise cDiscount.</span>
             </div>
         </div>
-
-        <div class="project col-sm-6 col-lg-4">
-            <div class="content">
-                <img class="img-responsive" src="/images/SummerBreakEdition.png" alt="Summer Break Edition"/>
-                <span class="title">Garage de la Tour</span>
-                <span class="info">Site regroupant les véhicules en vente dans un garage avec diverses informations.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="#" target="_blank"> En savoir +</a></span>
-            </div>
-        </div>
-
-        <div class="project col-sm-6 col-lg-4">
-            <div class="content">
-                <img class="img-responsive" src="/images/KingBelote.png" alt="King Belote" />
-                <span class="title">King Belote</span>
-                <span class="info">Site regroupant les véhicules en vente dans un garage avec diverses informations.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="#" target="_blank"> En savoir +</a></span>
-            </div>
-        </div>
-
-
     </div>
 
-    <div class="row realization margin">
-
+    <div class="row realization">
+        <div class="project col-sm-6 col-lg-4">
+            <div class="content">
+                <img class="img-responsive" src="/images/Belote.png" alt="Belote" />
+                <span class="title">Belote</span>
+                <span class="info">Jeu de belote.</span>
+            </div>
+        </div>
     </div>
 
 
